# hkpl_multiformat_patch

./: .env  .env.example  .gitignore  Dockerfile.agent  IMPLEMENTATION_GUIDE.md  docker-compose.yml  hkpl_before_rechunk.dump  main.py  pyproject.toml  requirements-agent.txt  trial.py
data/: evaluation_dataset.csv  generation_results.csv  generation_summary.json  retrieval_results.csv  retrieval_summary.json
postgres-init/: init.sql
scripts/: crawl_hkpl_site.py  evaluate_answers.py  evaluate_rag.py  evaluate_retrieval.py  generate_evaluation_dataset.py  hotpotqa_benchmark.py  ingest_documents.py  ingest_pgvector_llamaindex.py  phoenix_trace_rag.py  report_rag_evaluation.py  validate_evaluation_dataset.py  webz_news_benchmark.py
src/: compliance.py  corpus.py  graph.py  llm_client.py  memory.py  nodes.py  observability.py  phoenix_annotations.py  rag_diagnosis.py  retrieval.py  state.py  token_counting.py  tracing_helpers.py
tests/: hkpl_test.txt
uploads/: 189f667af9d84fd895d750c04101fc19_hkpl_faq_clean.csv  5b48924c685f4f80bf444cb16742eb97_hkpl_test.txt  crawler_00b7c8039a9fa1df.html  crawler_05d04b9c7181f7d1.html  crawler_06e09da671dde7d0.html  crawler_07c265e5885c9434.html  crawler_08345bd3932fdbeb.html  crawler_088c7be27d48522d.html  crawler_0b42ea05dc219ebd.html  crawler_0c4fccd881975e1b.html  crawler_0c5f47b04b6ecee2.html  crawler_0ef500b6dacaa1e5.html  crawler_0f40b4f24176fde7.html  crawler_0f928840299a8198.html  crawler_104a8dcabec9dd41.html  crawler_10968417f251d4de.html  crawler_124f46d605135b99.html  crawler_126f2fc8022ec8db.html  (+233 more)
(+13 files in other folders)
